--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,6 @@ commands:
   ClearChat:
     aliases: [ c, cc ]
     usage: /clearchat
+  Gamemode:
+    aliases: [ gm, g ]
+    usage: /gammemode [gamemode] [player]
